[project]
name = "caiman"
description = "Library and software for ROI detection and deconvolution of Calcium Imaging datasets"
authors = [
	{ name = "Andrea Giovannucci"},
	{ name = "Eftychios Pnevmatikakis"},
	{ name = "Johannes Friedrich" },
	{ name = "Valentina Staneva" },
	{ name = "Ben Deverett" },
	{ name = "Erick Cobos" },
	{ name = "Jeremie Kalfon"}]
readme = "README.md"
dynamic = ["classifiers", "keywords", "license", "scripts", "version"]
dependencies = [
  "av",
  "bokeh",
  "coverage",
  "cython",
  "h5py",
  "holoviews",
  "ipykernel",
  "ipython",
  "ipyparallel",
  "ipywidgets",
  "keras",
  "matplotlib",
  "mypy",
  "numpy",
  "numpydoc",
  "opencv-python",
  "peakutils",
  "pims",
  "psutil",
  "pynwb",
  "scikit-image",
  "scikit-learn",
  "scipy",
  "tensorflow",
  "tifffile",
  "tqdm",
  "yapf",
  "zarr"
]

[project.optional-dependencies]
jupyter = [
  "jupyter",
  "pyqtgraph",
  "tk"
]

[build-system]
requires = ["cython", "numpy", "setuptools", "wheel"]

[tool.setuptools]
py-modules = ["_buildhelper_cython"]

[tool.setuptools.cmdclass]
build_py = "_buildhelper_cython.build_py"

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.ai'
check-hidden = true
ignore-regex = '^\s*"image/\S+": ".*'
# some ad-hoc options/variable names
ignore-words-list = 'ans,siz,nd,dirct,dircts,fo,comparitor,shfts,mapp,coo,ptd,manuel,thre,recuse'
