[project]
name = "caiman"
description = "Library and software for ROI detection and deconvolution of Calcium Imaging datasets"
authors = [
	{ name = "Andrea Giovannucci"},
	{ name = "Eftychios Pnevmatikakis"},
	{ name = "Johannes Friedrich" },
	{ name = "Valentina Staneva" },
	{ name = "Ben Deverett" },
	{ name = "Erick Cobos" },
	{ name = "Jeremie Kalfon"},
        { name = "Kushal Kolar"}]
readme = "README.md"
dynamic = ["classifiers", "keywords", "license", "scripts", "version"]
dependencies = [
  "av",
  "bokeh >= 3.1.1",
  "coverage",
  "cython",
  "h5py >= 3.4.0",
  "holoviews >= 1.16.2",
  "ipykernel",
  "ipython",
  "ipyparallel",
  "ipywidgets",
  "keras",
  "matplotlib",
  "moviepy",
  "mypy",
  "numpy <2.0.0, >=1.26",
  "numpydoc",
  "opencv-python",
  "panel >= 1.0.2",
  "peakutils >= 1.3.5",
  "pims",
  "psutil",
  "pynwb",
  "pyside6",
  "pytest",
  "pytest-cov",
  "scikit-image >= 0.19.0",
  "scikit-learn >= 1.2",
  "scipy >= 1.10.1",
  "tensorflow >= 2.4.0, <2.16",
  "tifffile",
  "tqdm",
  "yapf",
  "zarr"
]

[project.optional-dependencies]
jupyter = [
  "jupyter",
  "jupyter_bokeh",
  "pyqtgraph",
  "tk"
]

[build-system]
requires = ["cython", "numpy", "setuptools", "wheel"]

[tool.setuptools]
py-modules = ["_buildhelper_cython"]

[tool.setuptools.cmdclass]
build_py = "_buildhelper_cython.build_py"

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.ai'
check-hidden = true
ignore-regex = '^\s*"image/\S+": ".*'
# some ad-hoc options/variable names
ignore-words-list = 'ans,siz,nd,dirct,dircts,fo,comparitor,shfts,mapp,coo,ptd,manuel,thre,recuse'
